--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-    nginx:
+  nginx:
     ports:
       - "80:80"
   node-app:
@@ -15,6 +15,6 @@ services:
       - SESSION_SECRET=${SESSION_SECRET}
     command: node index.js
   mongo:
-    enviroment:  
-      -  MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      -  MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    environment:  
+        MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
